# alphascope

./: .gitignore  README.md  data-download-snapshot.md  debug_missing.py  homepage-snapshot.md  pyproject.toml  requirements.txt  test.py  test_calendar.py
.streamlit/: config.toml
config/: settings.yaml
data/: .gitkeep
docs/: architecture.md  backtest_overtrading_analysis.md  configuration_guide.md  data_center_summary.md  deployment.md  prd.md  risk_model.md  roadmap.md  strategy_analysis.md  strategy_analysis_v2.md  strategy_consistency_report.md  strategy_upgrade_proposal.md
examples/: backtest_examples.py  backtest_usage.md  create_sample_data.py  create_trading_calendar.py  notification_examples.py  notification_usage.md  parquet_schema.md  strategy_examples.py  strategy_usage.md  trading_calendar_schema.md  usage_examples.md  web_unified_usage.md  web_usage.md  web_v2_usage.md
logs/: .gitkeep
specs/: constitution.md  spec_prompt_examples.md  specify.md  todo_unified.md
specs/contracts/: backtest_contract.md  data_contract.md  notification_contract.md  strategy_contract.md
specs/schemas/: data.schema.yaml  strategy.schema.yaml
specs/standards/: coding_standard.md  testing_standard.md
src/api/: deps.py  main.py  schemas.py
src/backtest/: __init__.py  backtest_engine.py  backtest_storage.py  benchmark.py  slippage.py
src/calendar/: trading_calendar.py
src/core/: cache.py  config.py  logger.py
src/data/: data_cleaner.py  schema.py  (+1 more)
tests/: conftest.py
web/: components.d.ts  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+55 files in other folders)
